prevent breaking and placing blocks